--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "firebase": "^9.9.3",
+    "plotly.js": "^2.14.0",
+    "plotly.js-dist": "^2.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
+    "@types/react-plotly.js": "^2.5.1",
     "node-sass": "^7.0.1",
     "sass": "^1.54.4"
   }
